--- a/CMS_Project/templates/core/base.html
+++ b/CMS_Project/templates/core/base.html
@@ -46,27 +46,27 @@
 
                             <div class="mb-3 col-12">
                                 <label>Username</label>
-                                <input type="text" name="username" id="usernam" class="form-control" placeholder="Enter Username" required>
+                                <input type="text" name="username" id="usernam" class="form-control" placeholder="Enter Username" >
                                
                             </div>  
                         </div>
 
                             <div class="mb-3 col-12">
                                 <label>Date of Birth</label>
-                                <input type="date" name="DOB" id ="Birthday_date" class="form-control datepicker" required>
+                                <input type="date" name="DOB" id ="Birthday_date" class="form-control datepicker " required>
                                 <div id = "bday_error"></div>
                             </div>
 
                             <label for="exampleInputEmail1" class="form-label mb-0">Email address</label>
                             <div class="input-group mb-3 col-12">
                                 <span class="input-group-text" id="basic-addon1"><i class='fas fa-user-alt'></i></span>
-                                <input type="email" class="input form-control" name="email" id="emailid" placeholder="Enter your email id" aria-label="Username" aria-describedby="basic-addon1" required/>
+                                <input type="email" class="input form-control" name="email" id="emailid" placeholder="Enter your email id" aria-label="Username" aria-describedby="basic-addon1" />
                            </div>
                 
                             <label>Password</label>
                             <div class="input-group mb-1 col-12">
                                 <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
-                                <input type="password" class="input form-control" id="password" name="password" placeholder="Password" required="true" aria-label="password" aria-describedby="passwordHelpBlock" >
+                                <input type="password" class="input form-control" id="password" name="password" placeholder="Password" aria-label="password" aria-describedby="passwordHelpBlock" >
                                 <span class="input-group-text";>
                                     <i class="fas fa-eye" id="eye"></i>
                                 </span>
