--- a/CMS_Project/templates/core/reg.html
+++ b/CMS_Project/templates/core/reg.html
@@ -34,33 +34,34 @@
                             <div class="mb-3 col-6">
                                 <label>First Name</label>
                                 <input type="text" name="fname" id="fname" class="form-control" placeholder="Enter First Name">
-                                <div id ="fname_error"></div>
+                                <span id="first_span" class="span"></span>
                             </div>
                           
                             <div class="mb-3 col-6">
                                 <label>Last Name</label>
                                 <input type="text" name="Lname" id="Lname" class="form-control" placeholder="Enter Last Name"> 
-                                <div id ="lname_error"></div>
+                                <span id="last_span" class="span"></span>
 
                             </div>
 
                             <div class="mb-3 col-12">
                                 <label>Username</label>
                                 <input type="text" name="username" id="usernam" class="form-control" placeholder="Enter Username" >
-                               
+                                <span id="usernam_span" class="span"></span>
                             </div>  
                         </div>
 
                             <div class="mb-3 col-12">
                                 <label>Date of Birth</label>
                                 <input type="date" name="DOB" id ="Birthday_date" class="form-control datepicker " required>
-                                <div id = "bday_error"></div>
+                                <span id="bd_span" class="span"></span>
                             </div>
 
                             <label for="exampleInputEmail1" class="form-label mb-0">Email address</label>
                             <div class="input-group mb-3 col-12">
                                 <span class="input-group-text" id="basic-addon1"><i class='fas fa-user-alt'></i></span>
                                 <input type="email" class="input form-control" name="email" id="emailid" placeholder="Enter your email id" aria-label="Username" aria-describedby="basic-addon1" />
+                                <span id="emailid_span" class="span"></span>
                             </div>
                             <div>
                                 <!-- {% for message in messages %} -->
@@ -79,6 +80,7 @@
                                 <span class="input-group-text";>
                                     <i class="fas fa-eye" id="eye"></i>
                                 </span>
+                                <div id ="pw_error"></div>
                             </div>
                             
 
