--- a/CMS_Project/templates/core/reg.html
+++ b/CMS_Project/templates/core/reg.html
@@ -60,7 +60,7 @@
                             <label for="exampleInputEmail1" class="form-label mb-0">Email address</label>
                             <div class="input-group mb-3 col-12">
                                 <span class="input-group-text" id="basic-addon1"><i class='fas fa-user-alt'></i></span>
-                                <input type="email" class="input form-control" name="email" id="emailid" placeholder="Enter your email id" aria-label="Username" aria-describedby="basic-addon1" />
+                                <input type="email" class="input form-control" name="email" id="emailid" placeholder="Enter your email id" aria-label="Username" aria-describedby="basic-addon1" /><br>
                                 <span id="emailid_span" class="span"></span>
                             </div>
                             <div>
